kubernetes/apps/nextcloud/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    backups.kalexlab.xyz/use: "true"
