kubernetes/apps/nextcloud/manifests/collabora-online.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: collabora-online
  labels:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: collabora-online
spec:
  type: ClusterIP
  ports:
    - port: 9980
      targetPort: 9980
      protocol: TCP
  selector:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: collabora-online
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora-online
  labels:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: collabora-online
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: collabora-online
  template:
    metadata:
      labels:
        kalexlab.xyz/app: nextcloud
        kalexlab.xyz/component: collabora-online
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: collabora-online
          image: "docker.io/collabora/code:26.04.5.1.1"
          imagePullPolicy: Always
          ports:
            - containerPort: 9980
              protocol: TCP
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 9980
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9980
            periodSeconds: 10
            failureThreshold: 4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: opt-cool-child-roots
              mountPath: /opt/cool/child-roots
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: opt-cool-child-roots
          emptyDir:
            sizeLimit: 1Gi
