kubernetes/apps/nextcloud/manifests/nextcloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: nextcloud
  annotations:
    gatus.kalexlab.xyz/enabled: "true"
    gatus.kalexlab.xyz/scheme: http
    gatus.kalexlab.xyz/path: /status.php
    gatus.kalexlab.xyz/endpoint: |
      conditions:
        - "[STATUS] == 200"
        - "[BODY].maintenance == false"
spec:
  type: ClusterIP
  ports:
    - name: nextcloud
      port: 80
      protocol: TCP
  selector:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: nextcloud
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  labels:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: nextcloud
spec:
  serviceName: nextcloud
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: nextcloud
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: nextcloud
        kalexlab.xyz/component: nextcloud
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: nextcloud
          image: "docker.io/library/nextcloud:35.0.1-apache"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 200Mi
              cpu: 10m
            limits:
              memory: 2Gi

          livenessProbe:
            httpGet:
              path: /status.php
              port: 80
              httpHeaders:
                - name: Host
                  value: nextcloud.nextcloud.svc.cluster.local
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /status.php
              port: 80
              httpHeaders:
                - name: Host
                  value: nextcloud.nextcloud.svc.cluster.local
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-www-pvc
            - mountPath: /var/www/html/data
              name: nextcloud-data-pvc
              subPath: data
            - mountPath: /var/www/html/config
              name: nextcloud-config
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run
              name: run
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: nextcloud-config
          emptyDir:
            sizeLimit: 1Gi
        - name: nextcloud-configmap
          configMap:
            name: nextcloud-config
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: nextcloud-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Gi
    - metadata:
        name: nextcloud-www-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
