kubernetes/apps/nextcloud/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloud.kalexlab.xyz`)
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: nextcloud-ingress-certificate-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora-online-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`collabora-online.kalexlab.xyz`)
      services:
        - name: collabora-online
          port: 9980
  tls:
    secretName: nextcloud-ingress-certificate-secret
