kubernetes/apps/nextcloud/manifests/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: nextcloud
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: nextcloud
              kalexlab.xyz/component: cluster
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: nextcloud
              kalexlab.xyz/component: cache
      ports:
        - protocol: TCP
          port: 6379
    # Allow Nextcloud to reach Authelia for OIDC
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8443
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: cluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: nextcloud
              kalexlab.xyz/component: nextcloud
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cache
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: nextcloud
              kalexlab.xyz/component: nextcloud
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collabora-online
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: collabora-online
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 9980
  egress:
    # Probably collabora-online -> nextcloud through Traefik (cloud.kalexlab.xyz)
    # Could maybe avoid this by configuring it differently (aliasgroup1 or domain)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8443
